--- a/style.css
+++ b/style.css
@@ -6,6 +6,7 @@ body {
   height: 100vh;
   width: 100vw;
   margin: 0px;
+  background-image: url(img/bg/PNG/game_background_3/game_background_3.png);
 }
 
 canvas {
