--- a/style.css
+++ b/style.css
@@ -1,4 +1,5 @@
 body {
+  text-align: center;
   display: flex;
   justify-content: center;
   align-items: center;
@@ -11,4 +12,40 @@ body {
 
 canvas {
   background-color: black;
+  z-index: 1;
+}
+
+.dNone {
+  display: none !important;
+}
+
+.startGameBg {
+  z-index: 2;
+  height: 100vh;
+  width: 100vw;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+}
+
+.logo img {
+  height: 500px;
+  width: 500px;
+}
+
+.text {
+}
+
+.btnSection {
+  display: flex;
+  gap: 10px;
+}
+
+.smallBtn {
+  background-color: rgba(134, 153, 131, 0.9);
+}
+
+.bigBtn {
+  background-color: rgba(134, 153, 131, 0.9);
 }
