--- a/style.css
+++ b/style.css
@@ -1,13 +1,21 @@
 body {
   text-align: center;
   display: flex;
-  justify-content: center;
   align-items: center;
   flex-direction: column;
   height: 100vh;
   width: 100vw;
   margin: 0px;
   background-image: url(img/bg/PNG/game_background_3/game_background_3.png);
+}
+
+.logo {
+  display: flex;
+  justify-content: center;
+}
+
+.logo img {
+  height: 300px;
 }
 
 canvas {
@@ -19,6 +27,26 @@ canvas {
   display: none !important;
 }
 
+.gamePlay {
+  position: relative;
+}
+
+.menu {
+  position: absolute;
+  top: 5px;
+  right: 10px;
+  width: 720px;
+  gap: 10px;
+  display: flex;
+  flex-direction: row;
+  justify-content: flex-end;
+}
+
+.sound img {
+  width: 36px;
+  height: auto;
+}
+
 .startGameBg {
   z-index: 2;
   height: 100vh;
@@ -27,11 +55,6 @@ canvas {
   justify-content: center;
   align-items: center;
   flex-direction: column;
-}
-
-.logo img {
-  height: 500px;
-  width: 500px;
 }
 
 .text {
