--- a/style.css
+++ b/style.css
@@ -1,3 +1,8 @@
+@font-face {
+  font-family: "Special Elite";
+  src: url(fonts/SpecialElite-Regular.ttf);
+}
+
 body {
   text-align: center;
   display: flex;
@@ -45,6 +50,7 @@ canvas {
 .sound img {
   width: 36px;
   height: auto;
+  cursor: pointer;
 }
 
 .startGameBg {
@@ -55,20 +61,214 @@ canvas {
   justify-content: center;
   align-items: center;
   flex-direction: column;
+  gap: 15px;
 }
 
-.text {
-}
+/* .text {
+} */
 
 .btnSection {
   display: flex;
-  gap: 10px;
+  gap: 15px;
 }
 
 .smallBtn {
   background-color: rgba(134, 153, 131, 0.9);
+  cursor: pointer;
+  border-radius: 20px;
+  text-shadow: -1px 0 #8f6327, 0 1px #7d4b07, 1px 0 #7d4b07, 0 -1px #7d4b07;
+}
+
+.smallBtn:hover {
+  background-color: rgba(192, 183, 183, 0.384);
+  color: black;
 }
 
 .bigBtn {
   background-color: rgba(134, 153, 131, 0.9);
+  font-family: "Special Elite";
+  font-size: 22px;
+  cursor: pointer;
+  border-radius: 20px;
+  color: #ffffff9e;
+  text-shadow: -1px 0 #8f6327, 0 1px #7d4b07, 1px 0 #7d4b07, 0 -1px #7d4b07;
+}
+
+.bigBtn:hover {
+  background-color: rgba(192, 183, 183, 0.384);
+  color: black;
+}
+
+.endscreen {
+  position: absolute;
+  width: 100%;
+  height: 100vh;
+  z-index: 10;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.endscreenContent {
+  width: 730px;
+  height: 490px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+  position: relative;
+  gap: 30px;
+}
+.playBtn {
+  width: 50px;
+  height: 50px;
+  border-radius: 20px;
+  background-color: #000000;
+  border: 2px solid #eef5ec00;
+  font-family: "Special Elite";
+  color: #ffffff9e;
+  text-shadow: -1px 0 #8f6327, 0 1px #7d4b07, 1px 0 #7d4b07, 0 -1px #7d4b07;
+  font-size: 30px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.playBtnUp {
+  width: 50px;
+  height: 50px;
+  border-radius: 20px;
+  background-color: #000000;
+  border: 2px solid #eef5ec00;
+  font-family: "Special Elite";
+  color: #ffffff9e;
+  text-shadow: -1px 0 #8f6327, 0 1px #7d4b07, 1px 0 #7d4b07, 0 -1px #7d4b07;
+  font-size: 30px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+.playBtnAttack {
+  width: 110px;
+  height: 50px;
+  border-radius: 20px;
+  background-color: #000000;
+  border: 2px solid #eef5ec00;
+  font-family: "Special Elite";
+  color: #ffffff9e;
+  text-shadow: -1px 0 #8f6327, 0 1px #7d4b07, 1px 0 #7d4b07, 0 -1px #7d4b07;
+  font-size: 30px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.walkRight {
+  font-family: "Special Elite";
+  font-size: 38px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  gap: 15px;
+  font-weight: bold;
+}
+
+.walkLeft {
+  font-family: "Special Elite";
+  font-size: 38px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  gap: 15px;
+  font-weight: bold;
+}
+
+.jump {
+  font-family: "Special Elite";
+  font-size: 38px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  gap: 15px;
+  font-weight: bold;
+}
+
+.flash {
+  font-family: "Special Elite";
+  font-size: 38px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  gap: 15px;
+  font-weight: bold;
+}
+
+.flash img {
+  width: 50px;
+}
+
+.fire {
+  font-family: "Special Elite";
+  font-size: 38px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  gap: 15px;
+  font-weight: bold;
+}
+
+.fire img {
+  width: 50px;
+}
+
+.startMenu {
+  display: flex;
+  gap: 15px;
+}
+.arrowUp {
+  transform: rotate(180deg);
+  width: 30px;
+}
+
+.arrowLeft {
+  transform: rotate(90deg);
+  width: 30px;
+}
+
+.arrowRight {
+  transform: rotate(270deg);
+  width: 30px;
+}
+
+.endscreenContent {
+  width: 730px;
+  height: 490px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+  position: relative;
+  gap: 30px;
+}
+
+.endscreenContent span {
+  font-family: "Special Elite";
+  color: #ffffff9e;
+  text-shadow: -1px 0 #8f6327, 0 1px #7d4b07, 1px 0 #7d4b07, 0 -1px #7d4b07;
+  margin: 0;
+  text-align: center;
+  font-size: 150px;
+  line-height: 80%;
+}
+
+.btn {
+  width: 200px;
+  height: 50px;
+  border-radius: 20px;
+  font-family: "Special Elite";
+  color: #ffffff9e;
+  text-shadow: -1px 0 #8f6327, 0 1px #7d4b07, 1px 0 #7d4b07, 0 -1px #7d4b07;
+  font-size: 30px;
+  cursor: pointer;
+  text-align: center;
 }
