--- a/style.css
+++ b/style.css
@@ -97,7 +97,7 @@ canvas {
   font-size: 22px;
   cursor: pointer;
   border-radius: 20px;
-  color: #ffffff9e;
+  color: #000000;
   text-shadow: -1px 0 #8f6327, 0 1px #7d4b07, 1px 0 #7d4b07, 0 -1px #7d4b07;
 }
 
